adding portfolio version five

--- a/templates/portfolio_v5/base_v5.html
+++ b/templates/portfolio_v5/base_v5.html
@@ -144,6 +144,8 @@
 <!-- Custom Section End -->
 
 
+{% comment %} skill section{% endcomment %}
+{% comment %}end of skill section{% endcomment %}
 {% comment %} services section{% endcomment %}
 {% include 'portfolio_v5/services.html' %}
 {% comment %}end of services {% endcomment %}
