--- a/templates/portfolio_v5/slider.html
+++ b/templates/portfolio_v5/slider.html
@@ -5,57 +5,39 @@
         <div class="sp-slide goll-main-slides">
             <div class="goll-img-overlay"></div>
 
-            <img class="sp-image" src="images/img-header/slider-img-1.jpg" alt="Slider 1"/>
+            <img class="sp-image" src="{{ profile.profilePicsImageURL }}" alt="Slider 1"/>
 
             <h1 class="sp-layer goll-slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-show-delay="1500"
                 data-hide-delay="200">
-                <span class="goll-highlight-texts"><img src="images/h1.png"></span>
+                <span class="goll-highlight-texts"><img src="{{ profile.profilePicsImageURL }}"
+                                                        style="border-radius: 80%"></span>
             </h1>
 
             <p class="sp-layer"
                data-position="center" data-vertical="15%" data-show-delay="2000" data-hide-delay="200"
                data-show-transition="left" data-hide-transition="right">
-                One Page Portfolio Template
+            <div style="font-size: 16px">{{ profile.user.first_name }} {{ profile.user.last_name }}</div>
+            {{ profile.motto }}
             </p>
         </div>
         <!-- Slides End -->
-
         <!-- Slides -->
         <div class="sp-slide goll-main-slides">
             <div class="goll-img-overlay"></div>
-            <img class="sp-image" src="images/img-header/slider-img-1.jpg" alt="Slider 2"/>
+            <img class="sp-image" src="{{ profile.backgroundImageURL }}" alt="Slider 2"/>
 
             <h1 class="sp-layer goll-slider-text-big"
                 data-position="center" data-show-transition="left" data-hide-transition="right" data-show-delay="1500"
                 data-hide-delay="200">
-                <span class="goll-highlight-texts"><img src="images/h1.png"></span>
+                <span class="goll-highlight-texts"><img src="{{ profile.backgroundImageURL }}"
+                                                        style="border-radius: 80%"></span>
             </h1>
 
             <p class="sp-layer"
                data-position="center" data-vertical="15%" data-show-delay="2000" data-hide-delay="200"
                data-show-transition="left" data-hide-transition="right">
-                One Page Portfolio Template
-            </p>
-        </div>
-        <!-- Slides End -->
-
-        <!-- Slides -->
-        <div class="sp-slide goll-main-slides">
-            <div class="goll-img-overlay"></div>
-
-            <img class="sp-image" src="images/img-header/slider-img-1.jpg" alt="Slider 3"/>
-
-            <h1 class="sp-layer goll-slider-text-big"
-                data-position="center" data-show-transition="left" data-hide-transition="right" data-show-delay="1500"
-                data-hide-delay="200">
-                <span class="goll-highlight-texts"><img src="images/h1.png"></span>
-            </h1>
-
-            <p class="sp-layer"
-               data-position="center" data-vertical="15%" data-show-delay="2000" data-hide-delay="200"
-               data-show-transition="left" data-hide-transition="right">
-                One Page Portfolio Template
+                {{ profile.user.first_name }} {{ profile.user.last_name }}
             </p>
         </div>
         <!-- Slides End -->
