--- a/templates/portfolio_v5/base_v5.html
+++ b/templates/portfolio_v5/base_v5.html
@@ -145,7 +145,10 @@
 
 
 {% comment %} skill section{% endcomment %}
+{% include 'portfolio_v5/skills.html' %}
 {% comment %}end of skill section{% endcomment %}
+
+
 {% comment %} services section{% endcomment %}
 {% include 'portfolio_v5/services.html' %}
 {% comment %}end of services {% endcomment %}
