--- a/templates/portfolio_v5/header.html
+++ b/templates/portfolio_v5/header.html
@@ -14,8 +14,8 @@
                 <!-- Logo -->
                 <a class="navbar-brand" href="index.html"><img class="logo" id="logo" src="{{ profile.logoImageURL }}"
                                                                alt="logo"
-                                                               style="width: 200px;
-                                                               height: 43px !important;"></a>
+                                                               style="width: 100px;
+                                                               height: 21.5px !important;"></a>
 
             </div>
             <!-- Navbar Toggle End -->
@@ -28,7 +28,7 @@
                     </li>
 
                     <li>
-                        <a href="#about">Features</a>
+                        <a href="#about">ABOUT</a>
                     </li>
                     <li>
                         <a href="#portfolio">Portfolio</a>
