--- a/templates/portfolio_v5/testimonial.html
+++ b/templates/portfolio_v5/testimonial.html
@@ -6,7 +6,7 @@
             <!-- Section Header -->
             <div class="col-md-12 col-sm-12 col-xs-12 goll-section-header wow fadeInDown">
                 <h2 class="secondary_color_dark">TESTI<span class="secondary_color">MONIAL</span></h2>
-                <div class="goll-section-divider"></div>
+                <div class=" primary_color goll-section-divider" ></div>
             </div>
             <!-- Section Header End -->
 
