--- a/templates/portfolio_v5/services.html
+++ b/templates/portfolio_v5/services.html
@@ -4,8 +4,8 @@
 
             <!-- Section Header -->
             <div class="col-md-12 col-sm-12 col-xs-12 goll-section-header wow fadeInDown">
-                <h2 class="secondary_color_dark">SERVI<span class="goll-highlight-text">CE</span></h2>
-                <div class="goll-section-divider"></div>
+                <h2 class="secondary_color_dark">SERVI<span class="secondary_color">CE</span></h2>
+                <div class=" primary_color goll-section-divider" ></div>
 
             </div>
             <!-- Section Header End -->
