--- a/templates/portfolio_v5/header.html
+++ b/templates/portfolio_v5/header.html
@@ -14,7 +14,7 @@
                 <!-- Logo -->
                 <a class="navbar-brand" href="index.html"><img class="logo" id="logo" src="{{ profile.logoImageURL }}"
                                                                alt="logo"
-                                                               style="width: 100px;
+                                                               style="width: 50px;
                                                                height: 21.5px !important;"></a>
 
             </div>
@@ -33,11 +33,21 @@
                     <li>
                         <a href="#portfolio">Portfolio</a>
                     </li>
+                    <li>
+                        <a href="#skill">Skill</a>
+                    </li>
+                    <li>
+                        <a href="#service">Service</a>
+                    </li>
 
                     <li>
                         <a href="#testimonials">Testimonial</a>
                     </li>
                     <li>
+                        <a href="#blog">Blog</a>
+                    </li>
+                    <li>
+
                         <a href="#contact">Contact Us</a>
                     </li>
                 </ul>
